Fixed changing bet: isNaN(newBet.value) returned true when there was an empty string in the entry field. Javascript tried to convert empty string to a number first which is why there was an issue.

--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ html, body, #new_bet{
 }
 
 nav {
-    background-color: #0d6efd;
+    background-color: #303336;
     color: var(--color);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
