--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ html, body, #new_bet{
 }
 
 nav {
-    background-color: #303336;
+    background-color: var(--bs-green);
     color: var(--color);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -35,6 +35,15 @@ nav {
     color: white;
 }
 
+footer {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bs-green);
+    
+}
 
 #game_cards {
     text-align: center;
@@ -44,6 +53,7 @@ nav {
 #dealer, #player {
     display: inline-block;
     text-align: center;
+    min-width: 200px;
 }
 
 #game_actions {
