--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,11 @@ nav {
     color: white;
 }
 
+a, a:hover {
+    text-decoration: none;
+    color: var(--color);
+}
+
 footer {
     width: 100%;
     height: 300px;
